--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,46 +11,10 @@
       content="Web site created using create-react-app"
     />
     <title>RDP App</title>
-    <style type="text/css">
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: Roboto, Helvetica, Arial, sans-serif;
-      }
-      .navbar {
-        background-color: #1976d2;
-      }
-      .navbar h3 {
-        display: inline-block;
-        text-align: left;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-      }
-      .navbar a {
-        display: inline-block;
-        padding: 10px;
-        color: #fff;
-        text-decoration: none;
-      }
-      .page-info {
-        padding: 10px;
-      }
-      .Current {
-        color: #2e8b57;
-      }
-      .Completed {
-        color: #ff6347;
-        text-decoration: line-through;
-      }
+    
     </style>
   </head>
   <body>
-    <div id="root">
-      <div class="navbar">
-        <h3>RDP</h3>
-      </div>
-      <p class="page-info">Loading...</p>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
